--- a/data/vars.pug
+++ b/data/vars.pug
@@ -178,7 +178,7 @@
 			"subtitle": [
 				{
 					"name": "Однослойные",
-					"href": "#"
+					"href": "single-layer.html"
 				},
 				{
 					"name": "Многослойные",
@@ -252,7 +252,7 @@
 			"subtitle": [
 				{
 					"name": "Однослойные",
-					"href": "#"
+					"href": "single-layer.html"
 				},
 				{
 					"name": "Многослойные",
@@ -355,4 +355,102 @@
 		"для фильтрации с рейтингом 1– 25 мкм производятся сумки с проплавлен-ным швом, что позволяет избежать протечек фильтруемой жидкости в отверстия от игл и нитей, используемых для стандартных сумок;",
 		"сертифицированы в соответствии с требованиями стандартов для пищевой и фармацевтической промышленности;",
 		"доступны во всех стандартных размерах и могут быть изготовлены по индивидуальному заказу."
+	]
+	singleLayers = [
+		{
+			"name": "IFAB BPONG",
+			"img": "1.png",
+			"description": "Однослойные рукавные фильтры изготовлены из высококачественного полипропилена и нашли широкое применение в пищевой, лакокрасочной, обрабатывающей промышленности в качестве предфильтров и финишных фильтров благодаря широкому диапазону микронного рейтинга.",
+			"link":"#",
+			"table":[
+				{
+					"title": "Материал",
+					"value": "Полипропилен"
+				},
+				{
+					"title": "Размеры",
+					"value": "Размер 1, 2, 3, 4 и под заказ"
+				},
+				{
+					"title": "Микронный рейтинг",
+					"value": "1,0 - 2000 мкм"
+				},
+				{
+					"title": "Типы креплений",
+					"value": "Polyloc PP и PE, стальное кольцо и специальные кольца"
+				},
+				{
+					"title": "Максимальный перепад давления",
+					"value": "1,5 бар"
+				},
+				{
+					"title": "Максимальная рабочая температура",
+					"value": "90°C"
+				}
+			]
+		},
+		{
+			"name": "Фильтр-сумка BPENG",
+			"img": "2.png",
+			"description": "Однослойные рукавные фильтры изготовлены из высококачественного полипропилена и нашли широкое применение в пищевой, лакокрасочной, обрабатывающей промышленности в качестве предфильтров и финишных фильтров благодаря широкому диапазону микронного рейтинга.",
+			"link":"#",
+			"table":[
+				{
+					"title": "Материал",
+					"value": "Полиэстер"
+				},
+				{
+					"title": "Размеры",
+					"value": "Размер 1, 2, 3, 4 и под заказ"
+				},
+				{
+					"title": "Микронный рейтинг",
+					"value": "1,0 - 2000 мкм"
+				},
+				{
+					"title": "Типы креплений",
+					"value": "Polyloc PP и PE, стальное кольцо и специальные кольца"
+				},
+				{
+					"title": "Максимальный перепад давления",
+					"value": "1,5 бар"
+				},
+				{
+					"title": "Максимальная рабочая температура",
+					"value": "140°C"
+				}
+			]
+		},
+		{
+			"name": "Фильтр-сумка BNMO",
+			"img": "3.png",
+			"description": "Однослойные рукавные фильтры изготовлены из высококачественного полипропилена и нашли широкое применение в пищевой, лакокрасочной, обрабатывающей промышленности в качестве предфильтров и финишных фильтров благодаря широкому диапазону микронного рейтинга.",
+			"link":"#",
+			"table":[
+				{
+					"title": "Материал",
+					"value": "Полиамид Nylon®"
+				},
+				{
+					"title": "Размеры",
+					"value": "Размер 1, 2, 3, 4 и под заказ"
+				},
+				{
+					"title": "Микронный рейтинг",
+					"value": "1,0 - 2000 мкм"
+				},
+				{
+					"title": "Типы креплений",
+					"value": "Polyloc PP и PE, стальное кольцо и специальные кольца"
+				},
+				{
+					"title": "Максимальный перепад давления",
+					"value": "1,5 бар"
+				},
+				{
+					"title": "Максимальная рабочая температура",
+					"value": "160°C"
+				}
+			]
+		},
 	]
