--- a/data/vars.pug
+++ b/data/vars.pug
@@ -110,6 +110,7 @@
 		{
 			"name": "Однослойные",
 			"img": "../handfilters/1.png",
+			"link": "single-layer.html"
 		},
 		{
 			"name": "Многослойные",
