--- a/src/pug/chunk/header.pug
+++ b/src/pug/chunk/header.pug
@@ -3,9 +3,11 @@ header.header
         .header__wrapper
             a(href="index.html").header__logo
                 img(src="/img/header/logo.png", alt="Logo").header__img 
+            include burger
             nav.header__nav 
                 ul.header-nav
                     each item in link
                         +nav(item.name, item.link)
+
         .header__back
-        include menu
+        //- include menu
