--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,11 @@
 @import "fonts/fonts.scss";
 @import "variables/vars.scss";
 
+@mixin w1280 {
+    @media (max-width: 1280px) {
+        @content;
+    }
+}
 * {
     box-sizing: border-box;
     margin: 0;
