--- a/src/sass/block/header.scss
+++ b/src/sass/block/header.scss
@@ -63,7 +63,7 @@
     &__btn{
         width: 13px;
         height: 11px;
-        mask-image: url("/img/header/arrow.svg");
+        mask-image: url("img/header/arrow.svg");
         mask-position: center;
         mask-repeat: no-repeat;
         transition: background-color .3s linear,
