--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -18,7 +18,7 @@ block page
                             +about(el) 
                     p.about__text.about__text--order--third Сотрудничая с ИФАБ Техно, Вы получите обоснованные решения по подбору фильтрующих материалов и корпусов (фильтродержателей), сертифицированных в соответствии с требованиями FDI 21CFR (пищевая промышленность).
                 .about__image 
-                    img(src="/img/about/image.jpg", alt="image").about__img
+                    img(src="img/about/image.jpg", alt="image").about__img
     include chunk/geo
     include chunk/companies
     section.about-btns
