--- a/src/pug/chunk/map.pug
+++ b/src/pug/chunk/map.pug
@@ -5,6 +5,6 @@ section.contacts
                 ul.contacts-list
                     li.contacts-list__item 
                         a(href="index.html").contacts-logo
-                            img(src="/img/header/logo.png", alt="Logo").contacts-logo__img
+                            img(src="img/header/logo.png", alt="Logo").contacts-logo__img
                     each item in contacts  
                         +contacts(item.img, item.text, item.href)
