--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -12,7 +12,7 @@ block page
         .container
             .contacts-page__wrapper
                 .contacts-page__image 
-                    img(src="/img/contacts/consult.jpg", alt="image")
+                    img(src="img/contacts/consult.jpg", alt="image")
                 .contacts-page__form 
                     h1.contacts-page__title У нас точно есть предложение для Вас!
                     include chunk/form
