--- a/src/pug/chunk/header.pug
+++ b/src/pug/chunk/header.pug
@@ -2,7 +2,7 @@ header.header
     .container
         .header__wrapper
             a(href="index.html").header__logo
-                img(src="/img/header/logo.png", alt="Logo").header__img 
+                img(src="img/header/logo.png", alt="Logo").header__img 
             include burger
             nav.header__nav 
                 ul.header-nav
@@ -10,4 +10,4 @@ header.header
                         +nav(item.name, item.link)
 
         .header__back
-        //- include menu
+        include menu
