--- a/src/pug/chunk/form.pug
+++ b/src/pug/chunk/form.pug
@@ -1,6 +1,6 @@
 form.form(action="#", style="max-width: " + width +";" )
     input(type="text", placeholder="Компания", name="company", required).form__text 
-    input(type="text", placeholder="Номер телефона", name="tel",required).form__text 
+    input(type="text", placeholder="Номер телефона", name="tel",required).form__text.form__phone 
     input(type="email", placeholder="E-mail", name="email",required).form__text 
     //- input(type="text", placeholder="Опишите ваш запрос", name="desc").form__text
     textarea(name="desc", placeholder="Опишите ваш запрос",required, style="height:"+height+";").form__text.form__textarea
