--- a/src/pug/chunk/geo.pug
+++ b/src/pug/chunk/geo.pug
@@ -2,7 +2,8 @@ section.geo
         .container
             .geo__title.title Наша география 
             .geo__wrapper
-                img(src="img/geo/map.png", alt="map").geo__img
+                .geo__image
+                    img(src="img/geo/map.png", alt="map").geo__img
                 .geo-countries
                     h3.geo-countries__title География производителей и поставщиков реализуемой на нашем рынке продукции представлена:
                     ul.geo-countries__list
