--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -49,6 +49,7 @@ block page
 
 block scripts 
      script(src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js")
+     script(src="https://unpkg.com/imask")
      script(src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU")
 
                     
