--- a/src/sass/block/info.scss
+++ b/src/sass/block/info.scss
@@ -40,7 +40,7 @@
     &__list{
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        // align-items: center;
         
     }
     &__item{
