--- a/src/pug/chunk/header.pug
+++ b/src/pug/chunk/header.pug
@@ -1,5 +1,5 @@
 header.header
-    .container
+    .container.header__container
         .header__wrapper
             a(href="index.html").header__logo
                 img(src="img/header/logo.png", alt="Logo").header__img 
@@ -8,6 +8,6 @@ header.header
                 ul.header-nav
                     each item in link
                         +nav(item.name, item.link)
-
-        .header__back
         include menu
+    .header__back
+    
