--- a/src/pug/chunk/map.pug
+++ b/src/pug/chunk/map.pug
@@ -4,7 +4,7 @@ section.contacts
                 .map(id = "map") 
                 ul.contacts-list
                     li.contacts-list__item 
-                        a(href="index.html").contacts-logo
+                        .contacts-logo
                             img(src="img/header/logo.png", alt="Logo").contacts-logo__img
                     each item in contacts  
                         +contacts(item.img, item.text, item.href)
