--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -19,4 +19,6 @@ block page
     include chunk/map
 
 block scripts 
+     script(src="https://unpkg.com/imask")
+
      script(src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU", type="text/javascript")
