--- a/src/sass/block/companies.scss
+++ b/src/sass/block/companies.scss
@@ -6,12 +6,14 @@
     &__list{
         display: flex;
         flex-wrap: wrap;
+        gap: 20px;
     }
     &__item{
         display: flex;
         justify-content: center;
         align-items: center;
         width: calc(100% / 6);
-        height: 263px;
+        max-width: 263px;
+        // height: 263px;
     }
 }
