--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -37,7 +37,8 @@ block page
                     .swiper-wrapper
                         each item in consult 
                             +slide(item.title,item.img)
-                    .swiper-pagination 
+                    .swiper-pagination
+                     
                 .consult__form 
                     h1.consult__title Мы имеем опыт решения задач, связанных с фильтрацией и очисткой продуктов и сред на разных производствах
                     p.consult__subtitle Оставьте данные для заказа или получения консультации
@@ -50,7 +51,7 @@ block page
 block scripts 
      script(src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js")
      script(src="https://unpkg.com/imask")
-     script(src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU")
+     script(src="https://api-maps.yandex.ru/2.1/?apikey=5c0a39f0-f006-4b0e-875b-b761c7851f20&lang=ru_RU")
 
                     
 
