--- a/src/sass/block/products.scss
+++ b/src/sass/block/products.scss
@@ -54,5 +54,8 @@
         &:hover{
             background-color: $lightblue;
         }
+        &:focus{
+            background-color: $blue;
+        }
     }
 }
