--- a/src/pug/chunk/map.pug
+++ b/src/pug/chunk/map.pug
@@ -1,7 +1,8 @@
 section.contacts
         .container 
-            .contacts__wrapper 
-                .map(id = "map") 
+            .contacts__wrapper
+                .map__wrapper 
+                    .map(id = "map") 
                 ul.contacts-list
                     li.contacts-list__item 
                         .contacts-logo
