--- a/src/sass/block/catalog.scss
+++ b/src/sass/block/catalog.scss
@@ -6,8 +6,10 @@
     &__list{
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
         flex-wrap: wrap;
+        row-gap: 20px;
+        column-gap: 20px;
     }
     &__link{
         display: flex;
@@ -26,6 +28,9 @@
         transition: all .3s linear;
         &:hover{
             background-color: $lightorange;
+        }
+        &:focus{
+            background-color: $deeporange;
         }
     }
 }
@@ -59,6 +64,9 @@
         transition: all .3s linear;
         &:hover{
             background-color: $lightblue;
+        }
+        &:focus{
+            background-color: $blue;
         }
         &::before{
             content: '';
