--- a/src/sass/block/companies.scss
+++ b/src/sass/block/companies.scss
@@ -7,13 +7,22 @@
         display: flex;
         flex-wrap: wrap;
         gap: 20px;
+        justify-content: center;
+        
     }
     &__item{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: calc(100% / 6);
+        // width: calc(100% / 6);
         max-width: 263px;
+        // @include breakpoint(xxl){
+        //     width: calc(100%/5 - 20px);
+        // }
         // height: 263px;
+    }
+    &__img{
+        width: 100%;
+        
     }
 }
