--- a/src/sass/block/consult.scss
+++ b/src/sass/block/consult.scss
@@ -3,6 +3,19 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 160px;
+        column-gap: 20px;
+        @include breakpoint(xl){
+            flex-direction: column-reverse;
+        }
+        
+    }
+    &__form{
+        @include breakpoint(xl){
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            margin-bottom: 40px;
+        }
     }
 
     &__title {
@@ -13,6 +26,15 @@
         margin-bottom: 70px;
         max-width: 904px;
         line-height: 60.48px;
+        @include breakpoint(xl){
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        @include breakpoint(sm){
+            font-size: 32px;
+            line-height: 34px;
+            text-align: center;
+        }
     }
 
     &__subtitle {
@@ -21,14 +43,20 @@
         font-weight: 700;
         font-size: 24px;
         line-height: 25.92px;
+        @include breakpoint(sm){
+            text-align: center;
+        }
     }
 }
 
 .swiper {
     max-width: 688px;
-    margin-left: 0px;
+    // margin-left: 0px;
+    width: 100%;
+    @include breakpoint (sm){
+        display: none;
+    }
 }
-
 .swiper-slide {
     
     &__background {
@@ -58,7 +86,7 @@
     }
 }
 .swiper-horizontal>.swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal, .swiper-pagination-custom, .swiper-pagination-fraction{
-    bottom: 0px;
+    bottom: 0;
 }
 .swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet{
     margin: 0 5px;
@@ -71,4 +99,9 @@
 }
 .swiper-pagination-bullet-active{
     background-color: $blue;
+}
+.swiper-pagination{
+    @include breakpoint(xll){
+        display: none;
+    }
 }
