--- a/src/sass/block/geo.scss
+++ b/src/sass/block/geo.scss
@@ -8,6 +8,7 @@
         display: flex;
         // justify-content: space-between;
         column-gap: 162px;
+        align-items: center;
     }
     &__img{
         width: 100%;
@@ -17,6 +18,9 @@
     }
     &__image{
         max-width: 688px;
+        @include breakpoint(md){
+            display: none;
+        }
     }
 }
 
