--- a/src/sass/block/header.scss
+++ b/src/sass/block/header.scss
@@ -1,7 +1,7 @@
 .header{
     position: sticky;
     top: 0;
-    padding: 20px 0;
+    // padding: 20px 0;
     z-index: 5;
     box-shadow: 0px -2px 15px rgba(0, 0, 0, 0.18);
     &__wrapper{
@@ -28,6 +28,11 @@
             display: none;
         }
     }
+    
+}
+.header__container{
+    position: relative;
+    padding: 20px 20px;
     
 }
 .header-nav{
