--- a/src/sass/block/map.scss
+++ b/src/sass/block/map.scss
@@ -1,5 +1,12 @@
 .map{
-    width: 1058px;
+    @include breakpoint (xs){
+        display: nonegit ;
+    }
     height: 695px;
     margin-bottom: 100px;
+    width: 100%;
+    &__wrapper{
+        max-width: 1058px;
+        width: 100%;
+    }
 }
