adaptive about page

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -13,18 +13,20 @@ block page
                     h1 АО “ИФАБ Техно” – дилер в России скандинавской компании Skandinaviska IFAB Filtrering AB
                     p  Офис ИФАБ Техно в Санкт-Петербурге организован в мае 1998 г. Головная компания занимает ведущее положение на европейском рынке и имеет более чем 30-летний опыт в области применения фильтрационных материалов.
                     p.about__text--order--second  Мы имеем опыт решения задач, связанных с фильтрацией и очисткой продуктов и сред, на различных производствах и отраслях промышленности:
-                    ul.about__table
-                        each el in about 
-                            +about(el) 
+                    .about__inner
+                        ul.about__table
+                            each el in about 
+                                +about(el) 
                     p Сотрудничая с ИФАБ Техно, Вы получите обоснованные решения по подбору фильтрующих материалов и корпусов (фильтродержателей), сертифицированных в соответствии с требованиями FDI 21CFR (пищевая промышленность).
                 .about__image 
                     img(src="img/about/image.jpg", alt="image").about__img
     include chunk/geo
     include chunk/companies
     section.about-btns
-        .about-btns__wrapper 
-            button(type="button").about-btns__btn.about-btns__consult Получить консультацию
-            a(href="#").about-btns__link.about-btns__btn Посмотреть всю продукцию
+        .container
+            .about-btns__wrapper 
+                button(type="button").about-btns__btn.about-btns__consult Получить консультацию
+                a(href="#").about-btns__link.about-btns__btn Посмотреть всю продукцию
     
                     
                       
