--- a/src/sass/block/map.scss
+++ b/src/sass/block/map.scss
@@ -1,6 +1,6 @@
 .map{
     @include breakpoint (xs){
-        display: nonegit ;
+        display: none ;
     }
     height: 695px;
     margin-bottom: 100px;
