--- a/src/sass/variables/vars.scss
+++ b/src/sass/variables/vars.scss
@@ -15,6 +15,11 @@ $info: #F0F4FF;
             @content;
         }
     }
+    @else if $point == img{
+        @media(max-width: 1879px){
+            @content;
+        }
+    }
     @else if $point == xll{
         @media(max-width: 1436px){
             @content;
