--- a/src/sass/block/aside.scss
+++ b/src/sass/block/aside.scss
@@ -1,4 +1,7 @@
 .aside{
+    @include breakpoint(md){
+        display: none;
+    }
     text-transform: uppercase;
     &__list{
         padding: 30px 30px 0px 48px;
