--- a/src/sass/block/products.scss
+++ b/src/sass/block/products.scss
@@ -21,22 +21,40 @@
     border: 1.28009px solid #E8E8E8;
     // height: 554px;
     width: calc(100% / 3 - 13.5px);
+    @include breakpoint(xll){
+        width: calc(100% / 2 - 13.5px);
+    }
+    @include breakpoint(lg){
+        width: 100%;
+    }
+    &__image{
+        max-width: 353px;
+        width: 100%;
+    }
     &__img{
-        width: 353px;
+        width: 100%;
         display: block;
     }
     &__inner{
         margin-top: 26px;
         display: flex;
         justify-content: space-between;
+        column-gap: 29px;
     }
     &__name{
         max-width: 244px;
+        @include breakpoint(xxl){
+            font-size: 20px;
+        }
+        @include breakpoint(xl){
+            font-size: 16px;
+        }
     }
     &__link{
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-shrink: 0;
         width: 80px;
         height: 80px;
         background-color: $blue;
@@ -56,6 +74,10 @@
         }
         &:focus{
             background-color: $blue;
+        }
+        @include breakpoint(xl){
+            width: 50px;
+            height: 50px;
         }
     }
 }
