adaptive single-layer page

--- a/src/sass/block/handfilters.scss
+++ b/src/sass/block/handfilters.scss
@@ -64,6 +64,8 @@
         column-gap: 40px;
         justify-content: center;
         margin-bottom: 60px;
+        row-gap: 40px;
+        flex-wrap: wrap;
     }
 }
 .additional-info{
