--- a/src/pug/chunk/mixins.pug
+++ b/src/pug/chunk/mixins.pug
@@ -103,7 +103,8 @@ mixin bread(name,href)
 
 mixin singleLayer(name,img,desc,link,table)
     li.single-layer-cell
-        img(src="img/singlelayers/"+ img, alt=img).single-layer-cell__img
+        .single-layer-cell__image
+            img(src="img/singlelayers/"+ img, alt=img).single-layer-cell__img
         .single-layer-cell__inner 
             .single-layer-cell__name= name 
             .single-layer-cell__description= desc 
