--- a/src/sass/block/bread.scss
+++ b/src/sass/block/bread.scss
@@ -31,6 +31,9 @@
         list-style: none;
         margin-bottom: 30px;
         color: inherit;
+        @include breakpoint(sm){
+            font-size: 14px;
+        }
     }
     &__list{
         list-style: none;
