--- a/src/sass/block/production-cells.scss
+++ b/src/sass/block/production-cells.scss
@@ -20,8 +20,22 @@
     &:last-child{
         margin-bottom: 60px;
     }
+    &__inner{
+        width: 67.75%;
+        @include breakpoint(xl){
+            width: auto;
+        }
+    }
     &__img{
-        max-height: 340px;
+        width: 100%;
+        // max-width: 405px;
+    }
+    &__image{
+        max-width: 405px;
+        width: 100%;
+        @include breakpoint(xl){
+            display: none;
+        }
     }
     &__name{
         text-transform: uppercase;
@@ -105,6 +119,7 @@
 .table-cell{
     display: grid;
     grid-template-columns: 1.4fr 1fr;
+    grid-column-gap: 20px;
     border: 1px solid $lightgrey;
     margin-bottom: -1px;
     color: #6D6D6D;
@@ -114,5 +129,8 @@
         display: flex;
         align-items: center;
         width: 350px;
+        @include breakpoint(xl){
+            width: auto;
+        }
     }
 }
