--- a/src/sass/block/header.scss
+++ b/src/sass/block/header.scss
@@ -1,6 +1,8 @@
 .header{
     position: sticky;
     top: 0;
+    width: 100%;
+    background-color: white;
     // padding: 20px 0;
     z-index: 5;
     box-shadow: 0px -2px 15px rgba(0, 0, 0, 0.18);
@@ -13,20 +15,48 @@
     }
     &__back{
         background-color: $white;
-        height: 100%;
-        top: 0;
+        height: 144%;
+        top: -20px;
         left: 0;
         width: 100%;
         z-index: 2;
         position: absolute;
+
+        @include w1280{
+            display: none;
+        }
     }
     &__logo{
+        z-index: 3;
         max-height: 92px;
     }
     &__nav{
         @include w1280{
-            display: none;
+            position: absolute;
+            top: 122%;
+            transform: translateX(104%);
+            // display: flex;
+            justify-content: center;
+            width: 100%;
+            background-color: white;
+            transition: all .3s ease-in;
+            border-top: 6px solid $blue;
+            padding: 20px 0 10px 0px;
+            text-align: left;
+            // display: flex;
+            // align-items: center;
+            // flex-direction: column;
+            overflow: auto;
         }
+    }
+    &__nav--active{
+        transform: translateX(0);
+        
+    }
+    &__nav--active--2{
+        min-height: 400px;
+        height: 100%;
+        overflow: auto;
     }
     
 }
@@ -38,7 +68,19 @@
 .header-nav{
     display: flex;
     column-gap: 80px;
+    @include w1280{
+        display: block;
+        // display: flex;
+        // flex-direction: column;
+        // align-items: left;
+    }
     &__item{
+        @include w1280{
+            margin-bottom: 10px;
+            margin-left: 60px;
+        }
+        z-index: 3;
+        max-width: fit-content;
         color: $grey;
         transition: all .2s linear;
         border-bottom: 2px solid rgba(0, 75, 169, 0);
