--- a/src/sass/block/menu.scss
+++ b/src/sass/block/menu.scss
@@ -1,9 +1,15 @@
 
 .menu{
+    @include w1280{
+        position:relative;
+        opacity: 1;
+        transform: translateY(0);
+        display: none;
+    }
     opacity: 1;
     border-top: 6px solid $blue;
     position: absolute;
-    z-index: 1;
+    z-index: 0;
     top: 0;
     right: 0px;
     transform: translateY(-100%);
@@ -39,9 +45,14 @@
     }
 }
 .menu--active{
-    top: 100%;
+    top: 122%;
     transform: translateY(0);
     opacity: 1;
+    @include w1280{
+        display: block;
+        top: 0;
+        overflow: auto;
+    }
 }
 .menu-sublist{
     &__link{
