--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,9 @@ a{
     text-decoration: none;
     color: $black;
 }
+.body-overflow{
+    overflow: hidden;
+}
 .container{
     max-width: 1720px;
     padding: 0 20px;
