--- a/src/pug/chunk/header.pug
+++ b/src/pug/chunk/header.pug
@@ -4,11 +4,13 @@ header.header
             a(href="index.html").header__logo
                 img(src="img/header/logo.png", alt="Logo").header__img 
             include burger
-            nav.header__nav 
+            nav.header__nav
+                
                 ul.header-nav
                     each item in link
                         +nav(item.name, item.link)
                     .header__back
+            .header-nav__back 
         
     
     
