--- a/src/sass/block/catalog.scss
+++ b/src/sass/block/catalog.scss
@@ -13,17 +13,17 @@
     }
     &__link{
         display: flex;
-        align-items: center;
-        justify-self: center;
         justify-content: center;
+        align-items: center;
+        
         font-family: 'raleway';
         font-weight: 700;
-        width: 354px;
+        max-width: 354px;
+        width: 100%;
         height: 75px;
         color: $white;
         border-radius: 38px;
-        margin-top: 80px;
-        margin-bottom: 160px;
+        
         background-color: $orange;
         transition: all .3s linear;
         &:hover{
@@ -32,11 +32,19 @@
         &:focus{
             background-color: $deeporange;
         }
+        @include breakpoint(xs){
+            font-size: 16px;
+        }
     }
 }
 .catalog-link{
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-self: center;
+    // justify-content: center;
+    margin-top: 80px;
+    margin-bottom: 160px;
+    
     // align-items: center;
 }
 .catalog-cell img{
@@ -55,11 +63,17 @@
         font-weight: 700;
         max-width: 195px;
     }
+    & img{
+        max-width: 276px;
+        width: 100%;
+    }
     &__link{
         position: relative;
         display: block;
         width: 62px;
+        
         height: 62px;
+        
         background-color: $blue;
         transition: all .3s linear;
         &:hover{
