--- a/src/sass/block/form.scss
+++ b/src/sass/block/form.scss
@@ -15,6 +15,7 @@ textarea:focus{
     row-gap: 15px;
     // max-width: 762px;
     max-width: 962px;
+    width: 100%;
     &__text{
         padding: 25px 37px 24px 37px;
         background-color: #FAFAFA;
@@ -33,7 +34,11 @@ textarea:focus{
     }
     &__submit{
         margin-top: 15px;
-        width: 368px;
+        max-width: 368px;
+        width: 100%;
+        @include breakpoint(xs){
+            font-size: 16px;
+        }
         height: 75px;
         display: flex;
         align-items: center;
