--- a/src/sass/block/header.scss
+++ b/src/sass/block/header.scss
@@ -29,12 +29,20 @@
     &__logo{
         z-index: 3;
         max-height: 92px;
+        
+    }
+    &__img{
+        @include breakpoint(xs){
+            max-width: 200px;
+        }
     }
     &__nav{
         @include w1280{
+            z-index: 1;
             position: absolute;
-            top: 122%;
-            transform: translateX(104%);
+            top: 0;
+            transform: translateY(-100%);
+            // transform: translateX(104%);
             // display: flex;
             justify-content: center;
             width: 100%;
@@ -50,7 +58,10 @@
         }
     }
     &__nav--active{
-        transform: translateX(0);
+        // transform: translateX(0);
+        transform: translateY(0);
+        top: 122%;
+        z-index: 1;
         
     }
     &__nav--active--2{
@@ -75,6 +86,14 @@
         // display: flex;
         // flex-direction: column;
         // align-items: left;
+    }
+    &__back{
+        width: 100%;
+        height: calc(100% + 40px);
+        top: -20px;
+        background-color: white;
+        z-index: 2;
+        position: absolute;
     }
     &__item{
         @include w1280{
@@ -110,8 +129,10 @@
     }
   
     &__btn{
-        width: 15px;
-        height: 14px;
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        margin-left: 5px;
         mask-image: url("../img/header/arrow.svg");
         mask-position: center;
         mask-repeat: no-repeat;
@@ -121,7 +142,7 @@
         &:hover{
             background-color: $blue;
         }
-        vertical-align: center;
+        vertical-align: middle;
         
     }
     &__btn--active{
