--- a/src/sass/block/menu.scss
+++ b/src/sass/block/menu.scss
@@ -20,6 +20,9 @@
     width: 100%;
     &__wrapper{
         padding: 36px 60px 40px 60px;
+        @include breakpoint(xs){
+            padding: 20px 30px 20px 30px;
+        }
         
         
         // height: 270px;
